# yt-dlp-bot

./: HANDOFF.md  bot.py  ledger.yaml  pyproject.toml  requirements.txt
.ledger/: init.yaml  max-quality-mp3.yaml  mp3-output.yaml  telegram-handoff.yaml  zapret.yaml
